	- "A" releases are "Major Releases" - Big day! Huge rewrites with tons of new features, optimizations
	- "B" releases are "Major Minor Releases" - Cool new features + rewrites, sometimes prone to issues due to new code.
	- "C" releases are "Minor Releases" - Contain bugfixes and improvements to code

********************************************************


Version 2.0 
	BETA - 5
	- Special Page Handling
	- Graphical Selectors
	- Themes Extension
	BETA - 4
	- Section Control Rewrite
		- Fixes issues with hiding same sections
	- Metapanel rewrite
	- Cloning & Meta Options
	BETA - 1, 2, 3
	- Sections Cloning
	- Admin Rewrite
	- Responsive Design
	- Advanced Template Selector
	- Improved Graphics 
	- Updated JS Libs
	- Rewrote Option Engine

Version 1.5.0 -
- Bug Fix - Using categories for feature slider
- API - Use WordPress updates system
- ShareBar - Use PageLines shortener
- Filters - pagelines_before_sharebar
- Filters - pagelines_after_sharebar
- Filters - pagelines_feature_autostop
- Filters - pagelines_branding_rssurl
- Nav - SuperFish fix
- Admin - Custom Post Types meta support added
- I18n - Rebuild translation files
- Sections - Fix twitter url
- Admin - Don't show meta if main blog page

Version 1.4.0 - Refactoring Release
- ShareBar Section - Fixed API Bug
- Feature - Upgraded JS Library
- Sections - Added Tax ID as Class
- Security - Dynamic CSS Handling
- Bug Fix - Cufon Loading
- Speed - Page Load Enhancements
- Theming - Improved CSS file overriding
- Code - Optimized file structure and globals
- API - Check for latest version from PageLines server.
- Admin - Fixed notification bug
- Code - Debug option and Debug tab.
------------------------------------- Date: 5-4-2011

Version 1.3.5
- Bug Fix - Multisite get_plugins() function not available error
------------------------------------- Date: 3-29-2011

Version 1.3.4
- Bug Fix - Social Icons
- Bug Fix - Cufon Loading
------------------------------------- Date: 3-28-2011

Version 1.3.3