@@ -3,7 +3,7 @@ Theme Name: PageLines Framework
 
 Description: PageLines Framework is an drag-and-drop theme-design framework for WordPress and HTML5. It will help you do amazing things with your site, faster & easier than ever before. Designed and developed by <a href="http://pagelines.com/">PageLines</a> in California. Twitter @pagelines
 
-Version: 2.0.b6
+Version: 2.0.b7
 
 Author: PageLines
 
