@@ -13,6 +13,11 @@
 
 
 Version 2.0 
+	BETA - 6
+	- Design Control
+	- Color Math
+	- Text Shadows
+	- Extension Refinements
 	BETA - 5
 	- Special Page Handling
 	- Graphical Selectors
